--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -19,6 +19,10 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_ui:
+    git:
+      url: git://github.com/flutter-jp/flutter_ui.git
+
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
