update ui widget

--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -24,8 +24,8 @@ dependencies:
       url: git://github.com/flutter-jp/flutter_ui.git
 
 
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
+  # The following adds the Fj Icons font to your application.
+  # Use with the FjIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
 
 dev_dependencies:
@@ -39,7 +39,7 @@ dev_dependencies:
 # The following section is specific to Flutter.
 flutter:
 
-  # The following line ensures that the Material Icons font is
+  # The following line ensures that the Fj Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
