--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,7 +12,7 @@ dependencies:
   flutter:
     sdk: flutter
   webview_flutter: ^0.3.15+1
-  cached_network_image: ^1.1.2+1
+#  cached_network_image: ^1.1.2+1
   fluttertoast: ^3.1.3
 
 dev_dependencies:
